--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -34,6 +34,9 @@ jobs:
 
     # 第四步：运行你的爬虫脚本
     - name: Run scraper
+      env:
+        # 把 GitHub Secrets 里的密码，赋值给名为 PUSHPLUS_TOKEN 的环境变量
+        PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
       run: python scraper.py
 
     # 第五步：把更新后的 data.json 存回仓库 (关键步骤！)
